# rtcog

./: .gitignore  .readthedocs.yaml  README.md  Untitled.ipynb  env.yml  minimal_env.yaml  pyproject.toml  pytest.ini  python_env.yml  rtcaps_env.yml
Realtime/PsychoPy-NeuroFeedback-Demo/: RTfeed.config.sample  demoExpt.py  rtCAPs_Exp01.py
Scripts/: IncrementalGLM.py  TestingDecoders_iGLM.py  TrainDecoders_OfflinePreproc.py  TrainDecoders_iGLM.py  config.py  rtCAPs_TrainModels-NIBABEL-TECH06.py
Scripts/Realtime_Scanner/: 01_BringROIsToSubjectSpace.sh  TrainDecoder_AtScanner.py
Scripts/Visualization/: RadarPlots.py
Scripts/afniInterfaceRT/: receiver.py
Scripts/rtcap_lib/: __init__.py  core.py  fMRI.py  rt_functions.py  svr_methods.py
TrainingMaterials/: Instructions_to_subjects.docx  Prescan_Ex1_Questionnaire.docx  Prescan_Ex2_Questionnaire.docx  Prescan_Ex3_Questionnaire.docx  Prescan_Ex4_Questionnaire.docx
afni_plugin/: plug_realtime.c
docs/: Makefile  make.bat
docs/source/: conf.py  custom_matcher.rst  custom_plugin.rst  custom_preproc.rst  viz.rst  (+20 more)
rtcaps/: README.md  config.py
rtcog/: README.md  experiment_registry.py  main.py  paths.py  run_minimal.py
rtfmri/: README.md  experiment_registry.py  main.py  paths.py
tests/: conftest.py  test_action_series.py  test_controller.py  test_core.py  test_esam_streaming.py  test_experiment.py  test_fMRI.py  test_hit_detector.py  test_hit_utils.py  test_log.py  test_options.py  test_preproc_outputs.py  test_preproc_steps.py  test_preproc_utils.py  test_rt_functions.py  test_snapshots.py  test_svr_methods.py
(+165 files in other folders)
