[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtcog"
version = "3.0.0.dev0"
description = "real-time fMRI monitoring of brain activity and cognitive processes"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name="Javier Gonzalez-Castillo", email="javiergc@mail.nih.gov" },
  { name="Marly Rubin", email="rubinmar@mail.nih.gov" },
]

[project.scripts]
rtcog = "rtcog.main:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
"Homepage" = "https://github.com/nimh-sfim/rtCAPs"
"Bug Tracker" = "https://github.com/nimh-sfim/rtCAPs/issues"